--- a/chatbot.css
+++ b/chatbot.css
@@ -12,17 +12,24 @@ body{
 
 .app-container{
    max-width:600px;
+
    margin-left:auto;
    margin-right:auto;
+
    display:flex;
    flex-direction: column;
    column-gap: 10px;
-   height: 100vh;
+
+   height: 90vh;
 }
 
 .input-container{
    display:flex;
    margin-bottom:30px;
+   max-width:600px;
+   width: 100%;
+   position:fixed;
+   bottom:0;
 }
 
 .send-button{
@@ -35,7 +42,6 @@ body{
    font-size:15px;
    cursor: pointer;
 }
-
 .send-button:active{
    opacity: 0.8;
 }
@@ -47,6 +53,22 @@ body{
    font-size:15px;
 
    flex-grow: 1;
+}
+.messages-section{
+   flex-grow:1;
+   margin-top:15px;
+   margin-bottom:15px;
+   justify-content: center;
+   overflow:scroll;
+   scrollbar-width: none;
+}
+
+.chat-message{
+   background-color: rgb(238, 238, 238);
+   padding:15px 20px;
+   border-radius:10px;
+   max-width: 300px;
+   overflow-wrap: break-word;
 }
 
 .chat-message-user-icon{
@@ -70,39 +92,15 @@ body{
 }
 
 
-
-.chat-message{
-   background-color: rgb(238, 238, 238);
-   padding:15px 20px;
-   border-radius:10px;
-   max-width: 300px;
-   overflow-wrap: break-word;
-}
-
-.messages-section{
-   flex-grow:1;
-   margin-top:15px;
-   margin-bottom:15px;
-   justify-content: center;
-   overflow:scroll;
-   scrollbar-width: none;
-}
-
-/* Mobile styles */
-@media (max-width: 600px) {
-   .app-container {
-       max-width: 100%;
-       padding: 10px;
+@media (max-width:600px){
+   body{
+      margin:0px;
    }
+   .app-container{
+      width:100%;
+      margin-left:10px;
+      margin-right:10px;
 
-   .input-container {
-       flex-direction: column;
-       margin-bottom: 20px;
-   }
-
-   .send-button {
-       margin-left: 0;
-       margin-top: 10px;
-       width: 100%;
+      height: 100vh;
    }
 }
