--- a/chatbot.css
+++ b/chatbot.css
@@ -64,6 +64,7 @@ body{
 }
 
 .chat-message{
+   margin-top:12px;
    background-color: rgb(238, 238, 238);
    padding:15px 20px;
    border-radius:10px;
