--- a/chatbot.css
+++ b/chatbot.css
@@ -2,6 +2,27 @@ body{
    font-family: Robot,Arial;
    margin-bottom:0px;
    margin-top:0px;
+   padding-top:75px;
+}
+
+.header{
+   height: 75px;
+   background-image: linear-gradient(100deg, #93befc,#0386E8 );
+   position: fixed;
+   top:0;
+   right:0;
+   left:0;
+
+   display:flex;
+   justify-content: center;
+   align-items: center;
+   
+}
+
+.title{
+   color:white;
+   font-size: 35px;
+   font-family:"DynaPuff",serif;
 }
 
 .welcome-message{
